--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -1,5 +1,5 @@
 <form autocomplete="off" onsubmit="event.preventDefault()">
-    <img src="./modules/foundryvtt-mountup/assets/card.png" />
+    <!-- <img src="./modules/foundryvtt-mountup/assets/card.png" /> -->
     <h2>{{localize 'foundryvtt-mountup.settings.formHeaders.hudSettings'}}</h2>
     <div class="form-group">
         <label>{{localize 'foundryvtt-mountup.settings.icon.name'}}:</label>
